; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Server.c_SiCallGetSessionStatus.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Server.c_SiCallGetSessionStatus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"getsessionstatus\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SiCallGetSessionStatus(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %14, label %11

11:                                               ; preds = %3
  %12 = load i32*, i32** %6, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %14, label %15

14:                                               ; preds = %11, %3
  store i32 0, i32* %4, align 4
  br label %36

15:                                               ; preds = %11
  %16 = call i32* (...) @NewPack()
  store i32* %16, i32** %8, align 8
  %17 = load i32*, i32** %8, align 8
  %18 = load i32*, i32** %7, align 8
  %19 = call i32 @OutRpcSessionStatus(i32* %17, i32* %18)
  %20 = load i32*, i32** %7, align 8
  %21 = call i32 @FreeRpcSessionStatus(i32* %20)
  %22 = load i32*, i32** %7, align 8
  %23 = call i32 @Zero(i32* %22, i32 4)
  %24 = load i32*, i32** %6, align 8
  %25 = load i32*, i32** %8, align 8
  %26 = call i32* @SiCallTask(i32* %24, i32* %25, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  store i32* %26, i32** %8, align 8
  %27 = load i32*, i32** %8, align 8
  %28 = icmp eq i32* %27, null
  br i1 %28, label %29, label %30

29:                                               ; preds = %15
  store i32 0, i32* %4, align 4
  br label %36

30:                                               ; preds = %15
  %31 = load i32*, i32** %7, align 8
  %32 = load i32*, i32** %8, align 8
  %33 = call i32 @InRpcSessionStatus(i32* %31, i32* %32)
  %34 = load i32*, i32** %8, align 8
  %35 = call i32 @FreePack(i32* %34)
  store i32 1, i32* %4, align 4
  br label %36

36:                                               ; preds = %30, %29, %14
  %37 = load i32, i32* %4, align 4
  ret i32 %37
}

declare dso_local i32* @NewPack(...) #1

declare dso_local i32 @OutRpcSessionStatus(i32*, i32*) #1

declare dso_local i32 @FreeRpcSessionStatus(i32*) #1

declare dso_local i32 @Zero(i32*, i32) #1

declare dso_local i32* @SiCallTask(i32*, i32*, i8*) #1

declare dso_local i32 @InRpcSessionStatus(i32*, i32*) #1

declare dso_local i32 @FreePack(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
